; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_rtld_printf.c_printf_out.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_rtld_printf.c_printf_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snprintf_arg = type { i64, i64, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snprintf_arg*)* @printf_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @printf_out(%struct.snprintf_arg* %0) #0 {
  %2 = alloca %struct.snprintf_arg*, align 8
  store %struct.snprintf_arg* %0, %struct.snprintf_arg** %2, align 8
  %3 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %4 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %7 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %5, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %36

11:                                               ; preds = %1
  %12 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %13 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %16 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %19 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %22 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = sub nsw i64 %20, %23
  %25 = call i32 @write(i32 %14, i32 %17, i64 %24)
  %26 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %27 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %30 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %29, i32 0, i32 3
  store i32 %28, i32* %30, align 4
  %31 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %32 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.snprintf_arg*, %struct.snprintf_arg** %2, align 8
  %35 = getelementptr inbounds %struct.snprintf_arg, %struct.snprintf_arg* %34, i32 0, i32 0
  store i64 %33, i64* %35, align 8
  br label %36

36:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @write(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
